<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main_activity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".Activities.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/gameTitle"
        android:layout_above="@+id/ModeTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/TutorialModeButton"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center_horizontal"
        android:text="@string/play_start"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/ModeTitle"/>

    <Button
        android:id="@+id/TutorialModeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tutorial_mode"
        android:layout_above="@+id/SinglePlayButton"
        />

    <Button
        android:id="@+id/SinglePlayButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/single_play_mode"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/RandomPlayButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/SinglePlayButton"
        android:text="@string/random_play_mode"
        android:layout_centerVertical="true"/>

</RelativeLayout>